--- a/contacts.html
+++ b/contacts.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+   <div class="wrapper">
     <div class="container">
         <div class="products-header padding-side">
             <div class="header">
@@ -58,7 +59,10 @@
             </div>
         </div>
 
-        <div class="footer padding-side">
+        
+
+    </div>
+    <div class="footer padding-side">
             <div class="fotter-center">
                 <div class="fotter-contacts">
                     <h3 class="fotter-h3">Contact Us</h3>
@@ -113,7 +117,6 @@
                 </div>
             </div>
         </div>
-
     </div>
 
 </body>
