--- a/product-details.html
+++ b/product-details.html
@@ -9,75 +9,78 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="wrapper">
+        <div class="container">
+            <div class="header padding-side">
+                <a href="index.html" class="logo"><img src="img/logo.svg" alt="logo"></a>
+                <ul class="menu">
+                    <li class="menu__list"><a href="index.html" class="menu__link">HOME</a></li>
+                    <li class="menu__list"><a href="products.html" class="menu__link  menu__link_activ">PRODUCTS</a></li>
+                    <li class="menu__list"><a href="#" class="menu__link">HISTORY</a></li>
+                    <li class="menu__list"><a href="#" class="menu__link">SHOWROOM</a></li>
+                    <li class="menu__list"><a href="contacts.html" class="menu__link">CONTACT</a></li>
+                    <li class="menu__list"><a href="#" class="menu__link"><img src="img/search.svg" alt="search"></a></li>
 
-        <div class="header padding-side">
-            <a href="index.html" class="logo"><img src="img/logo.svg" alt="logo"></a>
-            <ul class="menu">
-                <li class="menu__list"><a href="index.html" class="menu__link">HOME</a></li>
-                <li class="menu__list"><a href="products.html" class="menu__link  menu__link_activ">PRODUCTS</a></li>
-                <li class="menu__list"><a href="#" class="menu__link">HISTORY</a></li>
-                <li class="menu__list"><a href="#" class="menu__link">SHOWROOM</a></li>
-                <li class="menu__list"><a href="contacts.html" class="menu__link">CONTACT</a></li>
-                <li class="menu__list"><a href="#" class="menu__link"><img src="img/search.svg" alt="search"></a></li>
+                </ul>
+            </div>
+            <div class="menu-product-details">
+                <ul class="menu">
+                    <li class="menu__list"><a href="#" class="menu-product-details__link menu-product-details__link_activ">All</a></li>
+                    <li class="menu__list"><a href="#" class="menu-product-details__link ">HOME</a></li>
+                    <li class="menu__list"><a href="#" class="menu-product-details__link">FURNITURE</a></li>
+                    <li class="menu__list"><a href="#" class="menu-product-details__link">MODERN</a></li>
+                    <li class="menu__list"><a href="#" class="menu-product-details__link">CLASSIC</a></li>
 
-            </ul>
-        </div>
-        <div class="menu-product-details">
-            <ul class="menu">
-                <li class="menu__list"><a href="#" class="menu-product-details__link menu-product-details__link_activ">All</a></li>
-                <li class="menu__list"><a href="#" class="menu-product-details__link ">HOME</a></li>
-                <li class="menu__list"><a href="#" class="menu-product-details__link">FURNITURE</a></li>
-                <li class="menu__list"><a href="#" class="menu-product-details__link">MODERN</a></li>
-                <li class="menu__list"><a href="#" class="menu-product-details__link">CLASSIC</a></li>
-
-            </ul>
-        </div>
-        <div class="product-content">
-            <div class="product-slider">
-                <a href="img/slider1.jpg" target="_blank"><img src="img/slider1.jpg" alt="product red" class="img-lg"></a>
-                <div class="product-slider-navigation">
-                    <a class="product-slider-navigation" href="#"><img src="img/controll.jpg" alt="product blue"></a>
-                    <a class="product-slider-navigation" href="#"><img src="img/controll11.jpg" alt="product dark blue"></a>
-                    <a class="product-slider-navigation" href="#"><img src="img/controll2.jpg" alt="product pink"></a>
+                </ul>
+            </div>
+            <div class="product-content">
+                <div class="product-slider">
+                    <a href="img/slider1.jpg" target="_blank"><img src="img/slider1.jpg" alt="product red" class="img-lg"></a>
+                    <div class="product-slider-navigation">
+                        <a class="product-slider-navigation" href="#"><img src="img/controll.jpg" alt="product blue"></a>
+                        <a class="product-slider-navigation" href="#"><img src="img/controll11.jpg" alt="product dark blue"></a>
+                        <a class="product-slider-navigation" href="#"><img src="img/controll2.jpg" alt="product pink"></a>
+                    </div>
+                </div>
+                <div class="product-details">
+                    <h3 class="product-name">Fishnet Chair</h3>
+                    <p class="ordering-methods">Hot Deal</p>
+                    <div class="price">
+                        <p class="currency">$</p>
+                        <p class="price-value">36.7</p>
+                        <p class="square">/sq</p>
+                    </div>
+                    <a href="#" class="buy-btm">
+                        <p class="buy-p">Order Us</p>
+                        <img src="img/arrow2.svg" alt="">
+                    </a>
+                    <div class="product-description">
+                        <p class="product-description-p">The majesty of Mountains - Ugmonk style.</p>
+                        <p class="product-description-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                        <p class="product-description-p">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.</p>
+                        <p class="product-description-p">Sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
+                    </div>
                 </div>
             </div>
-            <div class="product-details">
-                <h3 class="product-name">Fishnet Chair</h3>
-                <p class="ordering-methods">Hot Deal</p>
-                <div class="price">
-                    <p class="currency">$</p>
-                    <p class="price-value">36.7</p>
-                    <p class="square">/sq</p>
+            <div class="output-module_products padding-side">
+
+                <div class="output-module_products__navigation">
+                    <h3 class="output-module_products_titles">Related Products</h3>
+                    <a href="#" class="explore__all">
+                        <p class="explore__all-p">explore all</p>
+                        <img src="img/arrow.svg" alt="">
+                    </a>
                 </div>
-                <a href="#" class="buy-btm">
-                    <p class="buy-p">Order Us</p>
-                    <img src="img/arrow2.svg" alt="">
-                </a>
-                <div class="product-description">
-                    <p class="product-description-p">The majesty of Mountains - Ugmonk style.</p>
-                    <p class="product-description-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                    <p class="product-description-p">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.</p>
-                    <p class="product-description-p">Sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
+                <div class="output-module_products_box">
+                    <a href="#" class="output-module_products__link"><img src="img/products/product-11.jpg" alt="product-11"></a>
+                    <a href="#" class="output-module_products__link"><img src="img/products/product-21.jpg" alt="product-21"></a>
+                    <a href="#" class="output-module_products__link"><img src="img/products/product-31.jpg" alt="product-31"></a>
+
                 </div>
             </div>
-        </div>
-        <div class="output-module_products padding-side">
 
-            <div class="output-module_products__navigation">
-                <h3 class="output-module_products_titles">Related Products</h3>
-                <a href="#" class="explore__all">
-                    <p class="explore__all-p">explore all</p>
-                    <img src="img/arrow.svg" alt="">
-                </a>
-            </div>
-            <div class="output-module_products_box">
-                <a href="#" class="output-module_products__link"><img src="img/products/product-11.jpg" alt="product-11"></a>
-                <a href="#" class="output-module_products__link"><img src="img/products/product-21.jpg" alt="product-21"></a>
-                <a href="#" class="output-module_products__link"><img src="img/products/product-31.jpg" alt="product-31"></a>
 
-            </div>
         </div>
         <div class="footer padding-side">
             <div class="fotter-center">
@@ -135,9 +138,7 @@
                 </div>
             </div>
         </div>
-
     </div>
-
 </body>
 
 </html>
