--- a/products.html
+++ b/products.html
@@ -9,80 +9,84 @@
 </head>
 
 <body>
-    <div class="container">
-        <div class="products-header padding-side">
-            <div class="header">
-                <a href="index.html" class="logo"><img src="img/logo.svg" alt="logo"></a>
-                <ul class="menu">
-                    <li class="menu__list"><a href="index.html" class="menu__link">HOME</a></li>
-                    <li class="menu__list"><a href="products.html" class="menu__link menu__link_activ">PRODUCTS</a></li>
-                    <li class="menu__list"><a href="#" class="menu__link">HISTORY</a></li>
-                    <li class="menu__list"><a href="#" class="menu__link">SHOWROOM</a></li>
-                    <li class="menu__list"><a href="contacts.html" class="menu__link">CONTACT</a></li>
-                    <li class="menu__list"><a href="#" class="menu__link"><img src="img/search.svg" alt="search"></a></li>
+    <div class="wrapper">
+        <div class="container">
+            <div class="products-header padding-side">
+                <div class="header">
+                    <a href="index.html" class="logo"><img src="img/logo.svg" alt="logo"></a>
+                    <ul class="menu">
+                        <li class="menu__list"><a href="index.html" class="menu__link">HOME</a></li>
+                        <li class="menu__list"><a href="products.html" class="menu__link menu__link_activ">PRODUCTS</a></li>
+                        <li class="menu__list"><a href="#" class="menu__link">HISTORY</a></li>
+                        <li class="menu__list"><a href="#" class="menu__link">SHOWROOM</a></li>
+                        <li class="menu__list"><a href="contacts.html" class="menu__link">CONTACT</a></li>
+                        <li class="menu__list"><a href="#" class="menu__link"><img src="img/search.svg" alt="search"></a></li>
+
+                    </ul>
+                </div>
+                <h2 class="products-header-h2">Our Products Range</h2>
+            </div>
+            <div class="catalogs padding-side">
+                <ul class="menu-catalogs">
+                    <li class="menu-catalogs__list"><a href="#" class="menu-catalogs__link menu-catalogs__link_activ">ALL</a></li>
+                    <li class="menu-catalogs__list"><a href="#" class="menu-catalogs__link">HOME</a></li>
+                    <li class="menu-catalogs__list"><a href="#" class="menu-catalogs__link">OFFICE</a></li>
+                    <li class="menu-catalogs__list"><a href="#" class="menu-catalogs__link">MODERN</a></li>
+                    <li class="menu-catalogs__list"><a href="#" class="menu-catalogs__link">CLASSIC</a></li>
 
                 </ul>
-            </div>
-            <h2 class="products-header-h2">Our Products Range</h2>
-        </div>
-        <div class="catalogs padding-side">
-            <ul class="menu-catalogs">
-                <li class="menu-catalogs__list"><a href="#" class="menu-catalogs__link menu-catalogs__link_activ">ALL</a></li>
-                <li class="menu-catalogs__list"><a href="#" class="menu-catalogs__link">HOME</a></li>
-                <li class="menu-catalogs__list"><a href="#" class="menu-catalogs__link">OFFICE</a></li>
-                <li class="menu-catalogs__list"><a href="#" class="menu-catalogs__link">MODERN</a></li>
-                <li class="menu-catalogs__list"><a href="#" class="menu-catalogs__link">CLASSIC</a></li>
-
-            </ul>
-            <div class="product-catalog">
-                <div class="product-catalog_box">
-                    <a href="product-details.html" class="product-catalog__link"><img src="img/products/product-11.jpg" alt="product-11"></a>
-                    <a href="product-details.html" class="product-catalog__link"><img src="img/products/product-21.jpg" alt="product-21"></a>
-                    <a href="product-details.html" class="product-catalog__link"><img src="img/products/product-31.jpg" alt="product-31"></a>
-                    <a href="product-details.html" class="product-catalog__link"><img src="img/products/product-41.jpg" alt="product-41"></a>
-                    <a href="product-details.html" class="product-catalog__link"><img src="img/products/product-5.jpg" alt="product-5"></a>
-                    <a href="product-details.html" class="product-catalog__link"><img src="img/products/product-6.jpg" alt="product-6"></a>
-                    <a href="product-details.html" class="product-catalog__link"><img src="img/products/product-11.jpg" alt="product-11"></a>
-                    <a href="product-details.html" class="product-catalog__link"><img src="img/products/product-21.jpg" alt="product-21"></a>
-                    <a href="product-details.html" class="product-catalog__link"><img src="img/products/product-31.jpg" alt="product-31"></a>
-                    <a href="product-details.html" class="product-catalog__link"><img src="img/products/product-41.jpg" alt="product-41"></a>
-                    <a href="product-details.html" class="product-catalog__link"><img src="img/products/product-5.jpg" alt="product-5"></a>
-                    <a href="product-details.html" class="product-catalog__link"><img src="img/products/product-6.jpg" alt="product-6"></a>
-                </div>
-            </div>
-            <a class="buttom-load" href="#"><img src="img/2-layers.png" alt=""></a>
-        </div>
-
-        <div class="promo-product products-page">
-            <div class="promo-content">
-                <img src="img/promo-img1.jpg" alt="promo-content-1">
-                <div class="promo-content_box">
-                    <div class="promo-content_box_center">
-                        <p class="promo-content_box_tag">exclusive</p>
-                        <h3 class="promo-content_box_name">Fishnet Chair</h3>
-                        <p class="promo-content_box_details">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt
-                            powder-coated black
-                            or highly polished chrome.</p>
-                        <a href="product-details.html" class="slider__btn">Order Us ></a>
+                <div class="product-catalog">
+                    <div class="product-catalog_box">
+                        <a href="product-details.html" class="product-catalog__link"><img src="img/products/product-11.jpg" alt="product-11"></a>
+                        <a href="product-details.html" class="product-catalog__link"><img src="img/products/product-21.jpg" alt="product-21"></a>
+                        <a href="product-details.html" class="product-catalog__link"><img src="img/products/product-31.jpg" alt="product-31"></a>
+                        <a href="product-details.html" class="product-catalog__link"><img src="img/products/product-41.jpg" alt="product-41"></a>
+                        <a href="product-details.html" class="product-catalog__link"><img src="img/products/product-5.jpg" alt="product-5"></a>
+                        <a href="product-details.html" class="product-catalog__link"><img src="img/products/product-6.jpg" alt="product-6"></a>
+                        <a href="product-details.html" class="product-catalog__link"><img src="img/products/product-11.jpg" alt="product-11"></a>
+                        <a href="product-details.html" class="product-catalog__link"><img src="img/products/product-21.jpg" alt="product-21"></a>
+                        <a href="product-details.html" class="product-catalog__link"><img src="img/products/product-31.jpg" alt="product-31"></a>
+                        <a href="product-details.html" class="product-catalog__link"><img src="img/products/product-41.jpg" alt="product-41"></a>
+                        <a href="product-details.html" class="product-catalog__link"><img src="img/products/product-5.jpg" alt="product-5"></a>
+                        <a href="product-details.html" class="product-catalog__link"><img src="img/products/product-6.jpg" alt="product-6"></a>
                     </div>
                 </div>
+                <a class="buttom-load" href="#"><img src="img/2-layers.png" alt=""></a>
             </div>
-            <div class="promo-content">
-                <img src="img/promo-img.jpg" alt="promo-content-2">
-                <div class="promo-content_box">
-                    <div class="promo-content_box_center">
-                        <p class="promo-content_box_tag">exclusive</p>
-                        <h3 class="promo-content_box_name">Fishnet Chair</h3>
-                        <p class="promo-content_box_details">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt
-                            powder-coated black
-                            or highly polished chrome.</p>
-                        <a href="product-details.html" class="slider__btn">Order Us ></a>
+
+            <div class="promo-product products-page">
+                <div class="promo-content">
+                    <img src="img/promo-img1.jpg" alt="promo-content-1">
+                    <div class="promo-content_box">
+                        <div class="promo-content_box_center">
+                            <p class="promo-content_box_tag">exclusive</p>
+                            <h3 class="promo-content_box_name">Fishnet Chair</h3>
+                            <p class="promo-content_box_details">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt
+                                powder-coated black
+                                or highly polished chrome.</p>
+                            <a href="product-details.html" class="slider__btn">Order Us ></a>
+                        </div>
                     </div>
                 </div>
+                <div class="promo-content">
+                    <img src="img/promo-img.jpg" alt="promo-content-2">
+                    <div class="promo-content_box">
+                        <div class="promo-content_box_center">
+                            <p class="promo-content_box_tag">exclusive</p>
+                            <h3 class="promo-content_box_name">Fishnet Chair</h3>
+                            <p class="promo-content_box_details">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt
+                                powder-coated black
+                                or highly polished chrome.</p>
+                            <a href="product-details.html" class="slider__btn">Order Us ></a>
+                        </div>
+                    </div>
+                </div>
+
             </div>
 
-        </div>
 
+
+        </div>
         <div class="footer padding-side">
             <div class="fotter-center">
                 <div class="fotter-contacts">
@@ -138,9 +142,7 @@
                 </div>
             </div>
         </div>
-
     </div>
-
 </body>
 
 </html>
